# kore_query

./: .codeclimate.yml  .gitignore  .gitmodules  .main.c  CMakeLists.txt  License.md  README.md  circle.yml  codecov.yml  database_exec.c  database_exec.h  database_query.c  database_query.h  database_query_stringify.c  database_query_stringify.h  doc.conf  json.c  json.h  kore_mockup.c  kore_mockup.h  serialize.c  serialize.h  strings.c  strings.h  version.h
.circle/: build.sh  check.sh  coverage_check.sh  install.sh  memory_check.sh
cmake/: CodeCoverage.cmake  GenerateBadges.cmake  create_badge.sh
doc/html/: _2home_2eraden_2code_2eraden_2kore_query_2json_8h-example.html  annotated.html  classes.html  database__exec_8h_source.html  database__query_8h_source.html  database__query__stringify_8h_source.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  index.html  json_8h.html  json_8h__dep__incl.md5  json_8h__incl.md5  json_8h_source.html  kore__mockup_8h_source.html  serialize_8h_source.html  strings_8h_source.html  structsDatabaseQuery-members.html  structsDatabaseQuery.html  structsDatabaseQueryCondition-members.html  structsDatabaseQueryCondition.html  structsDatabaseQueryCondition__coll__graph.md5  structsDatabaseQueryDistinct-members.html  structsDatabaseQueryDistinct.html  structsDatabaseQueryDistinct__coll__graph.md5  structsDatabaseQueryField-members.html  structsDatabaseQueryField.html  structsDatabaseQueryField__coll__graph.md5  structsDatabaseQueryJoin-members.html  structsDatabaseQueryJoin.html  structsDatabaseQueryJoin__coll__graph.md5  structsDatabaseQueryLimit-members.html  structsDatabaseQueryLimit.html  structsDatabaseQueryOrder-members.html  (+12 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  classes_0.js  classes_1.js  enums_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js  variables_9.js
doc/latex/: _2home_2eraden_2code_2eraden_2kore_query_2json_8h-example.tex  annotated.tex  examples.tex  files.tex  json_8h.tex  json_8h__dep__incl.md5  json_8h__incl.md5  refman.tex  structsDatabaseQuery.tex  structsDatabaseQueryCondition.tex  structsDatabaseQueryCondition__coll__graph.md5  structsDatabaseQueryDistinct.tex  structsDatabaseQueryDistinct__coll__graph.md5  structsDatabaseQueryField.tex  structsDatabaseQueryField__coll__graph.md5  structsDatabaseQueryJoin.tex  structsDatabaseQueryJoin__coll__graph.md5  structsDatabaseQueryLimit.tex  structsDatabaseQueryOrder.tex  structsDatabaseQueryOrder__coll__graph.md5  structsDatabaseQueryTable.tex  structsDatabaseQuery__coll__graph.md5  structsJSON.tex  structsJSONPath.tex  structsJSON__coll__graph.md5  unioneJSONValue.tex
includes/kore_query/: database_exec.h  serialize.h  version.h
mock/: accesslog.c  config.c  domain.c  http.c  kore.c  pgsql.c
src/: database_exec.c  database_query.c  database_query_stringify.c  json.c  serialize.c  strings.c
test/: create.psql  setup.psql  test.c  test.h  test_database_exec.c  test_database_exec.h  test_database_query.c  test_database_query.h  test_database_query_stringify.c  test_database_query_stringify.h  test_json.c  test_json.h  test_serialize.c  test_serialize.h  test_strings.c  test_strings.h
test/support/: ck_string.h
